apps/newreleases-dispatch-action/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: newreleases-dispatch-action-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: newreleases.arq.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: newreleases-dispatch-action-service
          servicePort: 80
  tls:
  - hosts:
    - newreleases.arq.dev
    secretName: newreleases-dispatch-action-cert
